--- a/src/App.css
+++ b/src/App.css
@@ -252,3 +252,14 @@ select {
 	margin: 8px;
 	padding: 4px;
 }
+
+.empty-wrapper {
+	width: 100%;
+	margin-top: 8px;
+	padding: 8px;
+	border-radius: 8px;
+	color: #aaa;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
