changed body color to white

--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,9 @@ video {
 	font: inherit;
 	vertical-align: baseline;
 }
+body {
+	background-color: white;
+}
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
